# townframe

./: .coderabbit.yaml  .editorconfig  .env.example  .env.example.sh  .gitignore  .gitmodules  .infisical.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CameraK  Cargo.toml  DAYBOOK.md  DEVDOC.md  README.md  biome.json  camera-samples  clippy.toml  compose-rich-editor  doc-md  flake.nix  fuser  ghjk  ghjk.ts  manual-camerax-module  pglite  pglite-bindings  pglite-build  pglite-oxide  pnpm-lock.yaml  settings.gradle.kts  wrpc
docs/: dict.md  (+1 more)
src/agents/: Cargo.toml  cart_object.rs  checkout_service.rs  docs.rs  main.rs
src/agents/auxiliary/: email_client.rs  payment_client.rs
src/am_utils_rs/: Cargo.toml  changes.rs  codecs.rs  ids.rs  iroh.rs  lib.rs  partition.rs  peers.rs  repo.rs  sync.rs
src/am_utils_rs/changes/: broker.rs
src/am_utils_rs/codecs/: json.rs
src/am_utils_rs/iroh/: codec.rs
src/am_utils_rs/repo/: changes.rs  iroh.rs  partition.rs  rpc.rs  runtime.rs
src/am_utils_rs/sync/: machine.rs  node.rs  partition.rs  peer.rs  protocol.rs  store.rs
src/api_utils_rs/: Cargo.toml  api.rs  codecs.rs  errs.rs  gen.rs  lib.rs  macros.rs  testing.rs  validation_errs.rs  wasmcloud.toml
src/api_utils_rs/api/: http.rs
src/api_utils_rs/wit/: imports.wit  package.wit
src/big_repo/: Cargo.toml  backend.rs  changes.rs  encrypted_blob.rs  ephemeral.rs  handler.rs  keyhive.rs  keyhive_conn.rs  keyhive_listener.rs  keyhive_storage.rs  lib.rs  rpc.rs  runtime.rs  sqlite_big_repo_store.rs  test.rs  wire.rs
src/big_repo/runtime2/: doc_worker.rs  group_part_worker.rs  handle.rs  hub.rs  io.rs  lease.rs  messages.rs  mod.rs  native.rs  tasks.rs  test_support.rs
src/big_repo/test2/: access_matrix.rs  capability.rs  cgka.rs  convergence.rs  edge.rs  encryption.rs  ephemeral.rs  ladder.rs  mod.rs  notifications.rs  restart.rs  revocation.rs  topologies.rs
src/big_sync/: Cargo.toml  backend.rs  lib.rs  lib.rs.disabled  part_store.rs  rpc.rs  stress_support.rs  test.rs  test_support.rs  trap.rs  worker.rs
src/big_sync/part_store/: memory.rs  sqlite.rs
src/big_sync/test/: stress.rs
src/big_sync_core/: Cargo.toml  bucket.rs  cursor.rs  fingerprint.rs  ids.rs  lib.rs  mpsc.rs  part_store.rs  rpc.rs  tasks.rs  uniffi.toml
src/big_sync_core/tasks/: decide_peer_strat.rs  leaf_buckets.rs  list_bucket.rs  merkle_leaf.rs  peer_replay.rs
src/btress_api/: .env  Cargo.toml  lib.rs  user.rs  utils.rs  wasmcloud.toml
src/btress_api/fixtures/: 000_test_data.sql
src/btress_api/migrations/: r__auth_user_functions.sql
src/btress_api/user/: create.rs
src/btress_api/wit/: package.wit  user.wit  world.wit
src/btress_http/: Cargo.toml  lib.rs  local.wadm.yaml  request.rs  wadm.yaml  wasmcloud.toml
src/btress_http/wit/: world.wit
src/daybook_api/: Cargo.toml  bindings.rs  lib.rs  wasmcloud.toml
src/daybook_api/doc/: create.rs
src/daybook_api/fixtures/: 000_test_data.sql
src/daybook_api/migrations/: r__doc_doc_functions.sql
src/daybook_api/wit/: doc.wit  package.wit  user.wit
src/daybook_cli/: Cargo.toml  config.rs  context.rs  main.rs
src/daybook_cli/fuse/: content.rs  filesystem.rs  metadata.rs  mod.rs  sync.rs  tests.rs
src/daybook_core/: Cargo.toml  am.rs  app.rs  blobs.rs  build.rs  build.rs.disabled  config.rs  crypto.rs  docs.rs  drawer.rs  e2e.rs  event_origin.rs  ffi.rs  globals.rs  imgtools.rs  index.rs  keyhive.rs  lib.rs  local_state.rs  macros.rs  plugs.rs  progress.rs  repo.rs  repos.rs  rt.rs  samod.rs  sample.ledger  secrets.rs  sql.rs  stores.rs  sync.rs  tables.rs  test_support.rs  tincans.rs  triage.rs  uniffi-bindgen.rs  uniffi.toml  wash_plugin.rs  wflows.rs
src/daybook_core/am/: changes.rs  mod.rs  version_updates.rs
src/daybook_core/blobs/: sync.rs
src/daybook_core/drawer/: cache.rs  dmeta.rs  events.rs  facet_recovery.rs  ffi.rs  lru.rs  meta.rs  mutations.rs  queries.rs  tests.rs  types.rs
src/daybook_core/e2e/: command_invoke_wflow.rs  doc_created_wflow.rs  embed_text_wflow.rs  image_label_nomic_wflow.rs  image_label_screenshot_meme_wflow.rs  index_vector_wflow.rs  learned_image_label_proposals_wflow.rs  ocr_image_wflow.rs  plugin_local_index_wflow.rs  stateless_view.rs
src/daybook_core/index/: doc_blobs.rs  facet_ref.rs  facet_set.rs
src/daybook_core/plugs/: manifest.rs  reference.rs
src/daybook_core/rt/: dispatch.rs  init.rs  switch.rs  triage.rs  wash_plugin.rs
src/daybook_core/sync/: TODO.md  bootstrap.rs  full.rs  full2.rs  full_blob_worker.rs  stress.rs  tests.rs
src/daybook_core/tables/: ffi.rs  store.rs
src/daybook_core/triage/: predicates.rs
src/daybook_core/wflows/: ingress.rs  runtime.rs
src/daybook_core/wit/: main.wit
src/daybook_ffi/: Cargo.toml  am.rs  blobs.rs  camera.rs  config.rs  drawer.rs  ffi.rs  globals.rs  lib.rs  listener_bridge.rs  macros.rs  repos.rs  rt.rs  sql.rs  tables.rs  uniffi-bindgen.rs  uniffi.toml
src/daybook_ffi/am/: version_updates.rs
src/daybook_ffi/repos/: blobs.rs  config.rs  dispatch.rs  drawer.rs  init.rs  plugs.rs  progress.rs  sqlite_local_state.rs  sync.rs  tables.rs
src/daybook_fuse/: Cargo.toml  lib.rs
src/daybook_http/: Cargo.toml  doc.rs  lib.rs  local.wadm.yaml  wadm.yaml  wasmcloud.toml
src/daybook_http/doc/: create.rs
src/daybook_http/wit/: world.wit
src/daybook_jobs/: Cargo.toml  docs.rs  main.rs
src/daybook_pdk/: Cargo.toml  lib.rs
src/daybook_restate/: Cargo.toml  main.rs
src/daybook_sdk/: Cargo.toml
src/daybook_sync/: Cargo.toml  main.rs  restate.rs
src/daybook_types/: Cargo.toml  automerge.rs  doc.rs  lib.rs  macros.rs  manifest.rs  reference.rs  test.rs  types.rs  uniffi.toml  url.rs  view.rs  wit.rs
src/daybook_wflows/: .gitignore  Cargo.toml  lib.rs
src/daybook_willow/: Cargo.toml  lib.rs  store.rs
src/daybook_xilem/: Cargo.toml
src/granary_web/: Cargo.toml  lib.rs  main.rs
src/leptos_oidc/: Cargo.toml  LICENSE
src/mltools/: Cargo.toml  lib.rs  models.rs
src/pauperfuse/: Cargo.toml  lib.rs  livetree.rs
src/play/: Cargo.toml  lib.rs
src/plug_dayledger/: Cargo.toml  e2e.rs  lib.rs  manifest.rs  types.rs
(+472 files in other folders)
