[workspace]
resolver = "3"
members = [
  "./src/api_utils_rs",
  "./src/autosurgeon/autosurgeon",
  "./src/autosurgeon/autosurgeon-derive/",
  "./src/btress_api",
  "./src/btress_http",
  "./src/daybook_api",
  "./src/daybook_cli",
  "./src/daybook_core",
  "./src/daybook_ffi",
  "./src/daybook_types",
  "./src/daybook_http",
  "./src/daybook_sync",
  "./src/daybook_wflows/",
  "./src/macros",
  "./src/wash_plugin_pglite/",
  "./src/test_wflows",
  # "./src/tests_http",
  "./src/utils_rs",
  "./src/wash_plugin_am_repo/",
  "./src/wash_plugin_utils/",
  "./src/wash_plugin_wflow/",
  "./src/wflow/",
  "./src/wflow_core/",
  "./src/wflow_ingress_http/",
  "./src/wflow_sdk",
  "./src/wflow_tokio/",
  "./src/wflow_webui/",
  "./src/xtask",
  # "./src/daybook_restate/",
  # "./src/sdk-shared-core/",
  # "./src/granary_web",
  # "./src/leptos_wasi/",
]
exclude = [
  "./src/samod"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = []
license = ""
repository = ""

[workspace.dependencies]
# internal
utils_rs = { path = "./src/utils_rs", default-features = false }
api_utils_rs = { path = "./src/api_utils_rs", default-features = false  }
btress_api = { path = "./src/btress_api" }
macros = { path = "./src/macros" }
daybook_core = { path = "./src/daybook_core", default-features = false }
daybook_types = { path = "./src/daybook_types", default-features = false }
wflow = { path = "./src/wflow", default-features = false }
wflow_core = { path = "./src/wflow_core", default-features = false }
wflow_tokio = { path = "./src/wflow_tokio", default-features = false }
wflow_sdk = { path = "./src/wflow_sdk", default-features = false }
wash_plugin_wflow = { path = "./src/wash_plugin_wflow", default-features = false }
wash_plugin_pglite = { path = "./src/wash_plugin_pglite", default-features = false }
wash_plugin_am_repo = { path = "./src/wash_plugin_am_repo" }
wash_plugin_utils = { path = "./src/wash_plugin_utils/" }

syn = { version = "2", features = ["extra-traits"] }

# futures
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.17", features = [] }

# ds
ahash = "0.8"
time = { version = "0.3", default-features = false, features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
url = "2.5.7"
# scopeguard = "1.2.0"

# encoding
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
multihash = "0.19.3"
data-encoding = "2.9"
blake3 = "1.8"

# web
leptos = { version = "0.8", default-features = false }
leptos-use = { version = "0.16", default-features = false }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", default-features = false }

# macros
displaydoc = "0.2"
educe = "0.6"

# errors
thiserror = "2"
anyhow = "1"
garde = { version = "0.22", features = ["derive", "regex", "url", "email"] }
terrors = "0.3.3"

# logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
  "tracing-log"
] }
tracing-unwrap = "1.0"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-futures = "0.2.5"

# auth
kanidm_client = "1.7.2"
kanidm_proto = "1.7.2"
# # openssl = { version = "0.10", features = ["vendored"] }
#
# [features]
# default = ["openssl/vendored"]


# os
dotenv-flow = "0.16.2"

# http
axum = { version = "0.8.6", default-features = false }
axum-extra = { version = "0.10.1", default-features = false }
http = "1"
utoipa = { version = "5.4.0", features = ["debug", "uuid", "time", "smallvec",  "preserve_order"] }
# utoipa-swagger-ui = "9"
# http
tower = "0.5"
tower-http = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "rustls-tls"] }
gloo = { version = "0.11.0", default-features = false }


# wasm
wit-bindgen = "0.48.1"

# sync
automerge = "0.7"
# autosurgeon = "0.9"
autosurgeon = { path = "src/autosurgeon/autosurgeon" }
automerge-test = "0.6"
samod = { version = "0.5.0" }
# samod = { path = "src/samod/samod" }
async-channel = "2.5.0"

# testing
insta = { version =  "1.44", features = ["yaml", "filters"] }
tempfile = "3"

# db
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  # "tls-rustls-ring-webpki",
  "time",
  "uuid",
  "macros",
  "json",
  "migrate",
  "ipnetwork",
] }

# ffi
uniffi = { version = "0.29.4" }
# uniffi = { path = "../uniffi-rs/uniffi/" }

wasmtime = "*"
wasmtime-wasi = { version = "*" }
# wash-runtime = "0.1.0"
wash-runtime = { path = "../wash/crates/wash-runtime/"}

scopeguard = "1.2.0"

# [patch.crates-io]
# wash-runtime = { path = "../wash/crates/wash-runtime/"}
# restate-sdk-shared-core = { path = "./src/sdk-shared-core/" }

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# NOTE: the comment above is now stale
[profile.wasm-release]
inherits = "release"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# lto = true
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# opt-level = 'z'
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
panic = "abort"


[[workspace.metadata.leptos]]
name = "wflow_webui"
# the package in the workspace that contains the server binary (binary crate)
bin-package = "wflow_webui"
# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "wflow_webui"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
# output-name = "isis"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "./target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "src/wflow_webui/styles/main.scss"
tailwind-input-file = "src/wflow_webui/styles/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "src/end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
