[workspace]
resolver = "3"
members = [
  "./src/am_utils_rs",
  "./src/api_utils_rs",
  "./src/daybook_cli",
  "./src/daybook_core",
  "./src/daybook_fuse",
  "./src/daybook_ffi",
  # "./src/daybook_server",
  "./src/daybook_types",
  "./src/daybook_wflows/",
  "./src/macros",
  "./src/mltools/",
  "./src/pauperfuse/",
  "./src/test_wflows",
  "./src/utils_rs",
  # "./src/wash_plugin_pglite/",
  "./src/wash_plugin_mltools/",
  "./src/wash_plugin_utils/",
  "./src/wash_plugin_wflow/",
  "./src/wflow/",
  "./src/wflow_core/",
  "./src/wflow_ingress_http/",
  "./src/wflow_sdk",
  "./src/wflow_tokio/",
  # "./src/wflow_webui/",
  "./src/xtask",
]
exclude = [
  "./src/btress_api",
  "./src/btress_http",
  "./src/daybook_api",
  "./src/daybook_http",
  "./src/tests_http",
  "./src/granary_web",
  "./src/leptos_wasi/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = []
license = ""
repository = ""

[workspace.dependencies]
# internal
utils_rs = { path = "./src/utils_rs", default-features = false }
api_utils_rs = { path = "./src/api_utils_rs", default-features = false  }
am_utils_rs = { path = "./src/am_utils_rs", default-features = false  }
# btress_api = { path = "./src/btress_api" }
macros = { path = "./src/macros" }
daybook_core = { path = "./src/daybook_core", default-features = false }
daybook_fuse = { path = "./src/daybook_fuse", default-features = false }
daybook_types = { path = "./src/daybook_types", default-features = false }
mltools = { path = "./src/mltools", default-features = false }
pauperfuse = { path = "./src/pauperfuse", default-features = false }
wflow = { path = "./src/wflow", default-features = false }
wflow_core = { path = "./src/wflow_core", default-features = false }
wflow_tokio = { path = "./src/wflow_tokio", default-features = false }
wflow_sdk = { path = "./src/wflow_sdk", default-features = false }
wash_plugin_wflow = { path = "./src/wash_plugin_wflow", default-features = false }
wash_plugin_pglite = { path = "./src/wash_plugin_pglite", default-features = false }
wash_plugin_utils = { path = "./src/wash_plugin_utils/" }
wash_plugin_mltools = { path = "./src/wash_plugin_mltools/" }

# meta
syn = { version = "2", features = ["extra-traits"] }
bon = "3.7.2"

# futures
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7.17", features = [] }

# ds
ahash = "0.8"
time = { version = "0.3", default-features = false, features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
url = "2.5.7"
addr = "0.15.6"
# scopeguard = "1.2.0"

# encoding
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3.16"
multihash = "0.19.3"
data-encoding = "2.10"
bs58 = "0.5.1"
blake3 = "1.8"
zstd = "0.13"

# web
leptos = { version = "0.8", default-features = false }
leptos-use = { version = "0.16", default-features = false }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", default-features = false }

# macros
pastey = "0.1"
displaydoc = "0.2"
educe = "0.6"
struct-patch = "0.10.4"

# errors
thiserror = "2"
anyhow = "1"
garde = { version = "0.22", features = ["derive", "regex", "url", "email"] }
terrors = "0.3.3"

# logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
  "tracing-log"
] }
tracing-unwrap = "1.0"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-futures = "0.2.5"

# auth
kanidm_client = "1.7.2"
kanidm_proto = "1.7.2"
# # openssl = { version = "0.10", features = ["vendored"] }
#
# [features]
# default = ["openssl/vendored"]


# os
dotenv-flow = "0.16"
directories = "6.0"
fs4 = "0.13.1"

# http
axum = { version = "0.8.6", default-features = false }
axum-extra = { version = "0.10.1", default-features = false }
http = "1"
utoipa = { version = "5.4.0", features = ["debug", "uuid", "time", "smallvec",  "preserve_order"] }
# utoipa-swagger-ui = "9"
# http
tower = "0.5"
tower-http = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "rustls-tls"] }
gloo = { version = "0.11.0", default-features = false }


# wasm
wit-bindgen = "0.52.0"

# sync
automerge = "0.7.3"
autosurgeon = "0.10.1"
automerge-test = "0.6"
samod = { version = "0.7.1" }
# samod = { path = "src/samod/samod" }
async-channel = "2.5.0"

# testing
insta = { version =  "1.44", features = ["yaml", "filters"] }
tempfile = "3"

# db
# sqlite-vec = "0.2.4-alpha"
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  # "tls-rustls-ring-webpki",
  "time",
  "uuid",
  "macros",
  "json",
  "migrate",
  "ipnetwork",
] }

# ffi
uniffi = { version = "0.31.0" }
# uniffi = { path = "../uniffi-rs/uniffi/" }

wasmtime = "*"
wasmtime-wasi = { version = "*" }
wash-runtime = "0.2.0"
# wash-runtime = { path = "../wash/crates/wash-runtime/"}

scopeguard = "1.2.0"

# cli
clap = "4.5"
clap_complete = "4.5"

[patch.crates-io]
# wash-runtime = { path = "../wash/crates/wash-runtime/"}
wash-runtime = { git = "https://github.com/wasmcloud/wash", rev = "e3cbff002a7922f83af02ce546286d4530203a6b" }
autosurgeon = { git = "https://github.com/dman-os/autosurgeon", rev = "28d9b6db96f09a34967a0941950f6753fd73a006" }
# sqlite-vec = { git = "https://github.com/vlasky/sqlite-vec", rev = "9facf1ab84f2a360c0f1e62db3a7f3eca5bc099a" }


# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# NOTE: the comment above is now stale
[profile.wasm-release]
inherits = "release"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# lto = true
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# opt-level = 'z'
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
panic = "abort"


[workspace.lints]
clippy.clone_on_ref_ptr = "warn"

[[workspace.metadata.leptos]]
name = "wflow_webui"
# the package in the workspace that contains the server binary (binary crate)
bin-package = "wflow_webui"
# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "wflow_webui"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
# output-name = "isis"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "./target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "src/wflow_webui/styles/main.scss"
tailwind-input-file = "src/wflow_webui/styles/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "src/end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
