[workspace]
resolver = "3"
members = [
  "./src/am_utils_rs",
  "./src/api_utils_rs",
  "./src/big_sync/",
  "./src/big_sync_core/",
  "./src/big_repo/",
  "./src/daybook_cli",
  "./src/daybook_core",
  "./src/daybook_ffi",
  # "./src/daybook_fuse",
  "./src/daybook_pdk",
  "./src/daybook_types",
  "./src/daybook_wflows/",
  # "./src/daybook_willow/",
  "./src/macros",
  "./src/mltools/",
  "./src/pauperfuse/",
  "./src/plug_dayledger/",
  "./src/plug_plabels/",
  "./src/plug_test/",
  "./src/test_wflows",
  "./src/utils_rs",
  "./src/wash_plugin_mltools/",
  "./src/wash_plugin_utils/",
  "./src/wash_plugin_wflow/",
  "./src/wflow/",
  "./src/wflow_core/",
  "./src/wflow_ingress_http/",
  "./src/wflow_sdk",
  "./src/wflow_tokio/",
  "./src/xtask",
  # "./src/daybook_server",
  # "./src/wash_plugin_pglite/",
  # "./src/wflow_webui/",
]
exclude = [
  "./src/btress_api",
  "./src/btress_http",
  "./src/daybook_api",
  "./src/daybook_http",
  "./src/tests_http",
  "./src/granary_web",
  "./src/leptos_wasi/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = []
license = ""
repository = ""

[workspace.dependencies]
#
# internal
utils_rs = { path = "./src/utils_rs", default-features = false }
api_utils_rs = { path = "./src/api_utils_rs", default-features = false  }
am_utils_rs = { path = "./src/am_utils_rs", default-features = false  }
# btress_api = { path = "./src/btress_api" }
macros = { path = "./src/macros" }
daybook_core = { path = "./src/daybook_core", default-features = false }
# daybook_fuse = { path = "./src/daybook_fuse", default-features = false }
daybook_types = { path = "./src/daybook_types", default-features = false }
daybook_pdk = { path = "./src/daybook_pdk", default-features = false }
mltools = { path = "./src/mltools", default-features = false }
wflow = { path = "./src/wflow", default-features = false }
wflow_core = { path = "./src/wflow_core", default-features = false }
wflow_tokio = { path = "./src/wflow_tokio", default-features = false }
wflow_sdk = { path = "./src/wflow_sdk", default-features = false }
wash_plugin_wflow = { path = "./src/wash_plugin_wflow", default-features = false }
wash_plugin_utils = { path = "./src/wash_plugin_utils/" }
wash_plugin_mltools = { path = "./src/wash_plugin_mltools/" }
big_sync_core = { path = "./src/big_sync_core/", default-features = false }
big_sync = { path = "./src/big_sync/" }
big_repo = { path = "./src/big_repo/" }

#
# meta
syn = { version = "2", features = ["extra-traits"] }
bon = "3.9"

#
# futures
async-trait = "0.1"
futures-buffered = { version = "0.2.13", features = ["tokio-coop"] }
futures = "0.3"
tokio = { version = "1.51", default-features = false }
tokio-util = { version = "0.7.17", features = [] }
async-lock = "3.4.2"
future_form = "0.3.1"
ahash = "0.8"
time = { version = "0.3", default-features = false, features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
bytes = "1"
url = "2.5.7"
addr = "0.15.6"
scopeguard = "1.2.0"
semver = { version = "1", features = ["serde"] }
surelock = "0.1"

#
# encoding
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "3.16"
multihash = "0.19.3"
data-encoding = "2.10"
bs58 = "0.5.1"
blake3 = "1.8"
zstd = "0.13"
camino = { version = "1.2.2", features = ["serde1"] }

#
# macros
pastey = "0.1"
displaydoc = "0.2"
educe = "0.6"
struct-patch = "0.10.4"
structstruck = "0.5.1"

#
# errors
thiserror = "2"
anyhow = "1"
garde = { version = "0.22", features = ["derive", "regex", "url", "email"] }

#
# logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "parking_lot",
  "tracing-log"
] }
tracing-unwrap = "1.0"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-futures = "0.2.5"

#
# os
dotenv-flow = "0.16"
directories = "6.0"
rand = "0.9.2"
fs4 = "0.13.1"

#
# http
axum = { version = "0.8.6", default-features = false }
axum-extra = { version = "0.10.1", default-features = false }
http = "1"
utoipa = { version = "5.4.0", features = ["debug", "uuid", "time", "smallvec",  "preserve_order"] }
# utoipa-swagger-ui = "9"
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "system-proxy", "json", "stream", "rustls-tls"] }

#
# sync
automerge = "0.9.0"
autosurgeon = "0.11.0"
automerge-test = "0.9"
subduction_core = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
subduction_iroh = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
subduction_websocket = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
sedimentree_core = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
sedimentree_fs_storage = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
subduction_crypto = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
subduction_keyhive = { git = "https://github.com/dman-os/subduction", rev = "4de6e00b49ddcf1b84872afea24f928e7063249a" }
async-channel = "2.5.0"
qrcode = { version = "0.14.1", default-features = false }

#
# testing
insta = { version =  "1.44", features = ["yaml", "filters"] }
tempfile = "3"
loom = "0.7.2"

#
# db
sqlite-vec = "0.1.6" # "0.2.4-alpha"
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  # "tls-rustls-ring-webpki",
  "time",
  "uuid",
  "macros",
  "json",
  "migrate",
  "ipnetwork",
] }

#
# ffi
uniffi = { version = "0.31.0" }
# uniffi = { path = "../uniffi-rs/uniffi/" }

#
# wasm
wasmtime = "45"
wash-runtime = { git = "https://github.com/dman-os/wasmCloud", rev = "61235c15f7157cd558f847317eaa4d1d365944f2" }
wit-bindgen = "0.55.0"
# wash-runtime = { path = "../wash/crates/wash-runtime/"}

#
# cli
clap = "4.5"
clap_complete = "4.5"

# 
# networks
iroh = "1.0.0-rc.0"
iroh-tickets = "1.0.0-rc.0"
iroh-blobs = "0.101.0"
iroh-docs = "0.99.0"
iroh-gossip = "0.99.0"

#
# actors
irpc = { version = "0.15.0", features = ["derive"] }
irpc-iroh = "0.15.0"

[patch.crates-io]
autosurgeon = { git = "https://github.com/dman-os/autosurgeon", rev = "274285c6007cccf4e5eb21a96bd1152ee0c6576c" }
autosurgeon-derive = { git = "https://github.com/dman-os/autosurgeon", rev = "274285c6007cccf4e5eb21a96bd1152ee0c6576c" }
automerge = { git = "https://github.com/automerge/automerge", branch = "fragments" }
# sqlite-vec = { git = "https://github.com/vlasky/sqlite-vec", rev = "9facf1ab84f2a360c0f1e62db3a7f3eca5bc099a" }
#
# [patch."https://github.com/dman-os/subduction"]
# subduction_core = { path = "../subduction/subduction_core" }
# subduction_iroh = { path = "../subduction/subduction_iroh" }
# subduction_websocket = { path = "../subduction/subduction_websocket" }
# sedimentree_core = { path = "../subduction/sedimentree_core" }
# sedimentree_fs_storage = { path = "../subduction/sedimentree_fs_storage" }
# subduction_crypto = { path = "../subduction/subduction_crypto" }
# subduction_keyhive = { path = "../subduction/subduction_keyhive" }


# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# NOTE: the comment above is now stale
[profile.wasm-release]
inherits = "release"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# lto = true
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# opt-level = 'z'
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
panic = "abort"


[workspace.lints]
clippy.clone_on_ref_ptr = "warn"

[[workspace.metadata.leptos]]
name = "wflow_webui"
# the package in the workspace that contains the server binary (binary crate)
bin-package = "wflow_webui"
# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "wflow_webui"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
# output-name = "isis"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "./target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "src/wflow_webui/styles/main.scss"
tailwind-input-file = "src/wflow_webui/styles/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "src/end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
