[package]
name = "agents"
version = "0.0.1"
edition = "2021"

[dependencies]
genai = "0.4.1"
llm = "1.3.4"
restate-sdk = "0.7.0"

daybook_types.workspace = true

# serde
serde.workspace = true

tokio = { workspace = true, features = ["full"] }

utils_rs.workspace = true

[[bin]]
name = "app"
path = "main.rs"
