[package]
name = "am_utils_rs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
utils_rs = { workspace = true, features = ["hash"] }
futures = { workspace = true }

#
# async
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "tracing"] }
tokio-util = { workspace = true }
async-lock = { workspace = true }
tokio-tungstenite = { version = "0.27.0", features = ["url"], optional = true }
async-trait.workspace = true
futures-buffered.workspace = true

#
# automerge
automerge = { workspace = true }
autosurgeon = { workspace = true }

#
# encoding
serde.workspace = true
data-encoding.workspace = true
bytes.workspace = true
camino = "1.2.2"
rand.workspace = true
blake3.workspace = true
tempfile.workspace = true

#
# errors
thiserror.workspace = true

#
# logging
tracing.workspace = true
