[package]
name = "am_utils_rs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
utils_rs = { workspace = true, features = ["hash"] }

#
# automerge
automerge = { workspace = true }
autosurgeon = { workspace = true }

#
# encoding
serde.workspace = true
data-encoding.workspace = true
camino = "1.2.2"

#
# log
