[package]
name = "api_utils_rs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[features]
default = ["automerge"]
automerge = ["utils_rs/automerge", "dep:autosurgeon", "dep:automerge"]

[dependencies]
utils_rs.workspace = true

autosurgeon = { workspace = true, optional = true }
automerge = { workspace = true, optional = true }

# futures
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time", "io-util"] }

# serde
serde.workspace = true
serde_json.workspace = true

# errors
color-eyre.workspace = true
garde.workspace = true
thiserror.workspace = true
displaydoc.workspace = true

wit-bindgen.workspace = true

# http
utoipa.workspace = true
http.workspace = true
# hyper = "1"
