[package]
name = "big_repo"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
#
# internal
utils_rs = { workspace = true, features = ["hash"] }
big_sync_core.workspace = true
big_sync.workspace = true
am_utils_rs.workspace = true

#
# ds
surelock.workspace = true
ed25519-dalek.workspace = true

#
# async
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time", "tracing"] }
tokio-util = { workspace = true }
async-lock = { workspace = true }
async-trait.workspace = true
futures-buffered.workspace = true
futures = { workspace = true }
async-channel.workspace = true

#
# automerge
automerge = { workspace = true }
autosurgeon = { workspace = true }

#
# encoding
serde.workspace = true
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
rand.workspace = true
rand_08 = { version = "0.8", package = "rand", default-features = false }
tempfile.workspace = true
atproto-dasl.workspace = true
nonempty.workspace = true
nonempty12 = { package = "nonempty", version = "0.12", features = ["std"] }
bincode = "1.3"

#
# errors
thiserror.workspace = true
iroh = { workspace = true, }
irpc = { workspace = true }
irpc-iroh.workspace = true

#
# sync
future_form = { version = "0.3.0", }
sedimentree_core = { workspace = true, features = ["rayon"] }
subduction_core = { workspace = true  }
subduction_crypto = { workspace = true, }
subduction_iroh = { workspace = true }
subduction_ephemeral = { workspace = true, features = ["std"] }
subduction_keyhive = { workspace = true, features = ["runtime"] }
subduction_redb_storage = { workspace = true }
subduction_websocket = { workspace = true, features = ["tokio_base"], }
keyhive_crypto.workspace = true
keyhive_core.workspace = true
beekem.workspace = true

#
# logging
tracing.workspace = true
pretty_assertions = "1.4.1"

[dev-dependencies]
big_sync = { workspace = true, features = ["test-support"] }
sqlx_utils_rs.workspace = true
