[package]
name = "big_sync"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
#
# internal
utils_rs = { workspace = true, features = ["hash"] }
big_sync_core.workspace = true

#
# ds
surelock.workspace = true

#
# encoding
serde.workspace = true

#
# errors
thiserror.workspace = true

#
# macros
structstruck.workspace = true

#
# async
tokio-util.workspace = true
async-channel.workspace = true
future_form.workspace = true

#
# db
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

#
# actors
irpc.workspace = true

#
# logging
tracing.workspace = true
